{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 26,
  "lineage": "c7ad7f63-fc3a-fc5f-55ca-50bcd41798fe",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "health",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10256",
                  "15017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-08T20:09:13.946-07:00",
            "deny": [],
            "description": "{\"kubernetes.io/cluster-id\":\"295bb7add3d7347f\"}",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-staging-10665/global/firewalls/k8s-295bb7add3d7347f-node-http-hc",
            "log_config": [],
            "name": "k8s-295bb7add3d7347f-node-http-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/host-staging-10665/global/networks/main",
            "priority": 1000,
            "project": "host-staging-10665",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-staging-10665/global/firewalls/k8s-295bb7add3d7347f-node-http-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-gke-7c384aa9-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main",
            "random_integer.int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "15021",
                  "443",
                  "80",
                  "15017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-08T20:09:13.946-07:00",
            "deny": [],
            "description": "{\"kubernetes.io/service-name\":\"istio-system/istio-ingressgateway\", \"kubernetes.io/service-ip\":\"35.231.175.94\"}",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/host-staging-10665/global/firewalls/k8s-fw-ab16272a0bd4044f685878bd7dd5aee6",
            "log_config": [],
            "name": "k8s-fw-ab16272a0bd4044f685878bd7dd5aee6",
            "network": "https://www.googleapis.com/compute/v1/projects/host-staging-10665/global/networks/main",
            "priority": 1000,
            "project": "host-staging-10665",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-staging-10665/global/firewalls/k8s-fw-ab16272a0bd4044f685878bd7dd5aee6",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-gke-7c384aa9-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main",
            "random_integer.int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/206542515877/global/networks/main",
            "mtu": 1500,
            "name": "main",
            "project": "206542515877",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-staging-10665/global/networks/main"
          },
          "dependencies": [
            "google_compute_shared_vpc_host_project.host",
            "google_project.host-staging",
            "random_integer.int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-08T19:35:59.198-07:00",
            "id": "projects/host-staging-10665/regions/us-east1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/host-staging-10665/global/networks/main",
            "project": "host-staging-10665",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-staging-10665/regions/us-east1/routers/router"
          },
          "dependencies": [
            "google_compute_network.main",
            "google_compute_shared_vpc_host_project.host",
            "google_project.host-staging",
            "random_integer.int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "mist_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "host-staging-10665/us-east1/router/nat",
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "host-staging-10665",
            "region": "us-east1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.main",
            "google_compute_router.router",
            "google_compute_shared_vpc_host_project.host",
            "google_compute_subnetwork.private",
            "google_project.host-staging",
            "random_integer.int"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-08T19:35:58.434-07:00",
            "gateway_address": "10.5.0.1",
            "id": "projects/206542515877/regions/us-east1/subnetworks/private",
            "ip_cidr_range": "10.5.0.0/20",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/host-staging-10665/global/networks/main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "206542515877",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.0.0/14",
                "range_name": "pod-ip-range"
              },
              {
                "ip_cidr_range": "10.4.0.0/19",
                "range_name": "services-ip-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/host-staging-10665/regions/us-east1/subnetworks/private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main",
            "google_compute_shared_vpc_host_project.host",
            "google_project.host-staging",
            "random_integer.int"
          ]
        }
      ]
    }
  ]
}